--- a/.github/workflows/check-infra-auth.yml
+++ b/.github/workflows/check-infra-auth.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       aws_region:
         description: AWS region
-        default: us-east-1
+        default: us-west-1
         required: false
       role_to_assume:
         description: ARN of IAM role to assume
