--- a/infra/.gitignore
+++ b/infra/.gitignore
@@ -17,6 +17,8 @@ crash.log
 *.tfvars
 !terraform.tfvars
 
+# Ignore terraform .out files
+*.out
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
