--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,22 +1,56 @@
 name: Deploy
 
 on:
+  # !! Uncomment the following lines once you've set up the dev environment and ready to turn on continuous deployment
   push:
     branches: ["main"]
-  workflow_dispatch: {}
+  workflow_dispatch:
+    inputs:
+      env_name:
+        description: "env_name input"
+        required: true
+        default: "dev"
+        type: choice
+        options:
+          - dev
+          - staging
+          - prod
+
+env:
+  ENV_NAME: ${{ inputs.env_name || 'dev' }}
+
+# Need to repeat the expression since env.ENV_NAME is not accessible in this context
+concurrency: cd-${{ inputs.env_name || 'dev' }}
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: read
+      id-token: write
+
     steps:
       - uses: actions/checkout@v3
 
+      - name: Initialize Terraform
+        uses: hashicorp/setup-terraform@v1.2.1
+        with: 
+          terraform_version: 1.2.0
+        run: terraform init
+
       - name: Build release
         run: make release-build
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          # !! Update the role-to-assume with the GitHub actions role ARN
+          role-to-assume: arn:aws:iam::<ACCOUNT_ID>:role/<PROJECT_NAME>-github-actions
+          aws-region: us-west-1
 
       - name: Publish release
         run: make release-publish
 
       - name: Deploy release
-        run: make release-deploy
+        run: make release-deploy ENV_NAME="$ENV_NAME"
