[shoegaze-template-apply] .. I think the working directory got nested in the checkout

--- a/.github/workflows/ci-participant-portal.yml
+++ b/.github/workflows/ci-participant-portal.yml
@@ -7,7 +7,7 @@ on:
   pull_request: {}
 defaults:
   run:
-    working-directory: ${{ github.workspace }}/participant_portal
+    working-directory: participant_portal
 
 jobs:
   setup-ci:
