[shoegaze-template-apply] Just keep committing

--- a/.github/workflows/ci-participant-portal.yml
+++ b/.github/workflows/ci-participant-portal.yml
@@ -5,8 +5,12 @@ on:
       - main
       - dev
   pull_request: {}
+defaults:
+  run:
+    working-directory: ./participant_portal
 
 jobs:
+
   setup-ci:
     name: 🧰 Setup CI
     runs-on: ubuntu-latest
@@ -26,7 +30,6 @@ jobs:
         uses: bahmutov/npm-install@v1
         with:
           useLockFile: false
-          working-directory: participant_portal
 
   lint:
     name: ⬣ ESLint
@@ -35,7 +38,6 @@ jobs:
     steps:
       - name: 🔬 Lint
         run: npm run lint
-        working-directory: "${GITHUB_WORKSPACE}/participant_portal"
 
   typecheck:
     name:  ʦ Typecheck
@@ -44,7 +46,6 @@ jobs:
     steps:
       - name: 🔎 Type check
         run: npm run typecheck --if-present
-        working-directory: "${GITHUB_WORKSPACE}/participant_portal"
 
   jest:
     name: ⚡ jest
@@ -53,7 +54,6 @@ jobs:
     steps:
       - name: ⚡ Run jest
         run: npm run test -- --coverage
-        working-directory: "${GITHUB_WORKSPACE}/participant_portal"
 
   playwright:
     name: 🎭 Playwright
@@ -62,12 +62,9 @@ jobs:
     steps:
       - name: 🖨 Copy the Darwin screenshots as Linux (faking it until we make it)
         run: find e2e -name "*.png" -exec bash -c 'cp "$0" "${0/darwin/linux}"' {} \;
-        working-directory: "${GITHUB_WORKSPACE}/participant_portal"
 
       - name: 🎭 Install Playwright browsers
         run: npx playwright install --with-deps
-        working-directory: "${GITHUB_WORKSPACE}/participant_portal"
 
       - name: 🐳 Run Playwright in Docker Compose
         run: npx playwright test --retries=3
-        working-directory: "${GITHUB_WORKSPACE}/participant_portal"
