--- a/.github/workflows/ci-participant-portal.yml
+++ b/.github/workflows/ci-participant-portal.yml
@@ -7,14 +7,14 @@ on:
   pull_request: {}
 
 
-jobs:
+defaults:
+  run:
+    working-directory: participant_portal
 
+jobs:
   setup-ci:
     name: 🧰 Setup CI
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./participant_portal
     steps:
       - name: 🛑 Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.11.0
