--- a/.github/workflows/ci-participant-portal.yml
+++ b/.github/workflows/ci-participant-portal.yml
@@ -9,7 +9,7 @@ on:
 
 defaults:
   run:
-    working-directory: participant_portal
+    working-directory: ./participant_portal
 
 jobs:
   setup-ci:
