--- a/.github/workflows/ci-participant-portal.yml
+++ b/.github/workflows/ci-participant-portal.yml
@@ -33,35 +33,15 @@ jobs:
           useLockFile: false
           working-directory: participant_portal
 
-  lint:
-    name: ⬣ ESLint
-    runs-on: ubuntu-latest
-    needs: setup-ci
-    steps:
-      - name: 🔬 Lint
+      - name: ⬣ Lint
         run: npm run lint
 
-  typecheck:
-    name:  ʦ Typecheck
-    runs-on: ubuntu-latest
-    needs: setup-ci
-    steps:
-      - name: 🔎 Type check
+      - name: ʦ Type check
         run: npm run typecheck --if-present
 
-  jest:
-    name: ⚡ jest
-    runs-on: ubuntu-latest
-    needs: setup-ci
-    steps:
       - name: ⚡ Run jest
         run: npm run test -- --coverage
 
-  playwright:
-    name: 🎭 Playwright
-    runs-on: ubuntu-latest
-    needs: setup-ci
-    steps:
       - name: 🖨 Copy the Darwin screenshots as Linux (faking it until we make it)
         run: find e2e -name "*.png" -exec bash -c 'cp "$0" "${0/darwin/linux}"' {} \;
 
