--- a/participant_portal/package.json
+++ b/participant_portal/package.json
@@ -15,6 +15,7 @@
     "test": "jest",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "e2e": "npx playwright test --retries=3",
     "storybook": "start-storybook -p 6006",
     "storybook:build": "build-storybook",
