--- a/.github/workflows/ci-participant-portal.yml
+++ b/.github/workflows/ci-participant-portal.yml
@@ -84,7 +84,8 @@ jobs:
       - name: 🎭 Install Playwright browsers
         run: npx playwright install --with-deps
 
+      - run: pwd
+      - run: ls -la
+
       - name: 🐳 Run Playwright in Docker Compose
-        run: pwd
-        run: ls -la
         run: npx playwright test --retries=3
