--- a/.github/workflows/ci-participant-portal.yml
+++ b/.github/workflows/ci-participant-portal.yml
@@ -86,6 +86,34 @@ jobs:
 
       - run: pwd
       - run: ls -la
+      - run: ls -la tests/helpers
+
+      - name: 🐳 Run Playwright in Docker Compose
+        run: npx playwright test --retries=3
+
+
+  playwright-container:
+    name: 🎭🐳 Playwright in Docker
+    runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/playwright:v1.31.0-focal
+    steps:
+      - name: ⬇️ Checkout repo
+        uses: actions/checkout@v3
+
+      - name: ⎔ Setup node
+        uses: actions/setup-node@v3.6.0
+        with:
+          node-version: 18
+
+      - name: 📥 Download deps
+        uses: bahmutov/npm-install@v1
+        with:
+          useLockFile: false
+          working-directory: participant_portal
+
+      - name: 🖨 Copy the Darwin screenshots as Linux (faking it until we make it)
+        run: find e2e -name "*.png" -exec bash -c 'cp "$0" "${0/darwin/linux}"' {} \;
 
       - name: 🐳 Run Playwright in Docker Compose
         run: npx playwright test --retries=3
