--- a/.github/workflows/ci-participant-portal.yml
+++ b/.github/workflows/ci-participant-portal.yml
@@ -31,37 +31,28 @@ jobs:
           working-directory: ./participant_portal
 
   lint:
-    defaults:
-      run:
-        working-directory: ./participant_portal
     name: ⬣ ESLint
     runs-on: ubuntu-latest
     needs: setup-ci
     steps:
       - name: 🔬 Lint
-        run: npm run lint
+        run: npm --prefix participant_portal run lint
 
   typecheck:
-    defaults:
-      run:
-        working-directory: ./participant_portal
     name:  ʦ Typecheck
     runs-on: ubuntu-latest
     needs: setup-ci
     steps:
       - name: 🔎 Type check
-        run: npm run typecheck --if-present
+        run: npm --prefix participant_portal  run typecheck --if-present
 
   jest:
-    defaults:
-      run:
-        working-directory: ./participant_portal
     name: ⚡ jest
     runs-on: ubuntu-latest
     needs: setup-ci
     steps:
       - name: ⚡ Run jest
-        run: npm run test -- --coverage
+        run: npm  --prefix participant_portal run test -- --coverage
 
   playwright:
     defaults:
@@ -78,4 +69,4 @@ jobs:
         run: npx playwright install --with-deps
 
       - name: 🐳 Run Playwright in Docker Compose
-        run: npx playwright test --retries=3
+        run: npm --prefix participant_portal run e2e
