[shoegaze-template-apply] Trying the --prefix on npm

--- a/.github/workflows/ci-participant-portal.yml
+++ b/.github/workflows/ci-participant-portal.yml
@@ -37,7 +37,7 @@ jobs:
     steps:
       - name: 🔬 Lint
         run: pwd
-      - run: ls -l .
+      - run: ls -l ..
       - run: npm --prefix participant_portal run lint
 
   typecheck:
