--- a/.github/workflows/ci-participant-portal.yml
+++ b/.github/workflows/ci-participant-portal.yml
@@ -6,16 +6,11 @@ on:
       - dev
   pull_request: {}
 
-
 jobs:
-
-  setup-ci:
-    name: 🧰 Setup CI
+  lint:
+    name: ⬣ ESLint
     runs-on: ubuntu-latest
     steps:
-      - name: 🛑 Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.11.0
-
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v3
 
@@ -30,40 +25,72 @@ jobs:
           useLockFile: false
           working-directory: ./participant_portal
 
-  lint:
-    name: ⬣ ESLint
-    runs-on: ubuntu-latest
-    needs: setup-ci
-    steps:
       - name: 🔬 Lint
         run: pwd
-      - run: ls -l ..
+      - run: ls -l .
+      - run: ls -l participant_portal
       - run: npm --prefix participant_portal run lint
 
   typecheck:
     name:  ʦ Typecheck
     runs-on: ubuntu-latest
-    needs: setup-ci
     steps:
+      - name: ⬇️ Checkout repo
+        uses: actions/checkout@v3
+
+      - name: ⎔ Setup node
+        uses: actions/setup-node@v3.6.0
+        with:
+          node-version: 18
+
+      - name: 📥 Download deps
+        uses: bahmutov/npm-install@v1
+        with:
+          useLockFile: false
+          working-directory: ./participant_portal
+
       - name: 🔎 Type check
         run: npm --prefix participant_portal  run typecheck --if-present
 
   jest:
     name: ⚡ jest
     runs-on: ubuntu-latest
-    needs: setup-ci
     steps:
+      - name: ⬇️ Checkout repo
+        uses: actions/checkout@v3
+
+      - name: ⎔ Setup node
+        uses: actions/setup-node@v3.6.0
+        with:
+          node-version: 18
+
+      - name: 📥 Download deps
+        uses: bahmutov/npm-install@v1
+        with:
+          useLockFile: false
+          working-directory: ./participant_portal
+
       - name: ⚡ Run jest
         run: npm  --prefix participant_portal run test -- --coverage
 
   playwright:
-    defaults:
-      run:
-        working-directory: ./participant_portal
     name: 🎭 Playwright
     runs-on: ubuntu-latest
-    needs: setup-ci
     steps:
+      - name: ⬇️ Checkout repo
+        uses: actions/checkout@v3
+
+      - name: ⎔ Setup node
+        uses: actions/setup-node@v3.6.0
+        with:
+          node-version: 18
+
+      - name: 📥 Download deps
+        uses: bahmutov/npm-install@v1
+        with:
+          useLockFile: false
+          working-directory: ./participant_portal
+
       - name: 🖨 Copy the Darwin screenshots as Linux (faking it until we make it)
         run: find e2e -name "*.png" -exec bash -c 'cp "$0" "${0/darwin/linux}"' {} \;
 
