[shoegaze-template-apply] Adding playwright browser caching, trying working directory for playwright

--- a/.github/workflows/ci-participant-portal.yml
+++ b/.github/workflows/ci-participant-portal.yml
@@ -94,10 +94,10 @@ jobs:
       - name: 🖨 Copy the Darwin screenshots as Linux (faking it until we make it)
         run: find participant_portal/e2e -name "*.png" -exec bash -c 'cp "$0" "${0/darwin/linux}"' {} \;
 
-      - name: Get installed Playwright version
+      - name: ❓ Get installed Playwright version
         id: playwright-version
         run: echo "PLAYWRIGHT_VERSION=$(node -e "console.log(require('participant_portal/package-lock.json').dependencies['@playwright/test'].version)")" >> $GITHUB_ENV
-      - name: Cache playwright binaries
+      - name: 🔒 Cache playwright binaries
         uses: actions/cache@v3
         id: playwright-cache
         with:
@@ -107,7 +107,8 @@ jobs:
       - name: 🎭 Install Playwright browsers
         run: npx playwright install --with-deps
         if: steps.playwright-cache.outputs.cache-hit != 'true'
-
+      - name: Run LS because I have to I guess
+        run: ls -l participant_portal/tests
       - name: 🐳 Run Playwright in Docker Compose
         run: npm run e2e
         working-directory: participant_portal
