[shoegaze-template-apply] Fixing cache tag for browsers

--- a/.github/workflows/ci-participant-portal.yml
+++ b/.github/workflows/ci-participant-portal.yml
@@ -96,7 +96,7 @@ jobs:
 
       - name: ❓ Get installed Playwright version
         id: playwright-version
-        run: echo "PLAYWRIGHT_VERSION=$(node -e "console.log(require('participant_portal/package-lock.json').dependencies['@playwright/test'].version)")" >> $GITHUB_ENV
+        run: echo "PLAYWRIGHT_VERSION=$(node -e "console.log(require('./participant_portal/package-lock.json').dependencies['@playwright/test'].version)")" >> $GITHUB_ENV
       - name: 🔒 Cache playwright binaries
         uses: actions/cache@v3
         id: playwright-cache
@@ -108,7 +108,8 @@ jobs:
         run: npx playwright install --with-deps
         if: steps.playwright-cache.outputs.cache-hit != 'true'
       - name: Run LS because I have to I guess
-        run: ls -l participant_portal/tests
+        run: ls -l
+        working-directory: participant_portal
       - name: 🐳 Run Playwright in Docker Compose
-        run: npm run e2e
+        run: npx playwright test --retries=3
         working-directory: participant_portal
