--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -33,10 +33,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Initialize Terraform
+      - name: Set Up Terraform
         uses: hashicorp/setup-terraform@v1.2.1
         with: 
           terraform_version: 1.2.0
+
+      - name: Initialize Terraform
         run: terraform init
 
       - name: Build release
