[shoegaze-template-apply] Getting the Storybook workflow to show on pull, fiddling with Playwright

--- a/.github/workflows/ci-participant-portal.yml
+++ b/.github/workflows/ci-participant-portal.yml
@@ -110,6 +110,10 @@ jobs:
         run: npx playwright install --with-deps
         if: steps.playwright-cache.outputs.cache-hit != 'true'
 
+      - name: 🛠️ Install Playwright deps
+        run: npx playwright install-deps
+        if: steps.playwright-cache.outputs.cache-hit != 'true'
+
       - name: 🐳 Run Playwright in Docker Compose
         run: npx playwright test --retries=3
         working-directory: participant_portal
