--- a/.github/workflows/cd-storybook.yml
+++ b/.github/workflows/cd-storybook.yml
@@ -5,6 +5,7 @@ on:
   # !! Uncomment the lines below to enable this workflow
   push:
     branches: ["main"]
+  pull_request: {}
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
