[shoegaze-template-apply] Adding build CSS step to storybook workflow

--- a/.github/workflows/cd-storybook.yml
+++ b/.github/workflows/cd-storybook.yml
@@ -25,23 +25,31 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: ✅ Checkout
         uses: actions/checkout@v3
-      - name: Setup NPM
+
+      - name: ⚙️ Setup NPM
         uses: actions/setup-node@v3
         with:
           node-version: "18"
-      - name: Setup Pages
+
+      - name: 📄 Setup Pages
         uses: actions/configure-pages@v2
         id: pages_config
+
       - name: 📥 Download deps
         uses: bahmutov/npm-install@v1
         with:
           useLockFile: false
           working-directory: ./participant_portal
-      - name: Build
+
+      - name: 🖼 Build CSS
+        run: npm  --prefix participant_portal run css
+
+      - name: 🏗️ Build Storybook
         run: BASE_PATH=${{ steps.pages_config.outputs.base_path }} npm --prefix=./participant_portal run storybook:build
-      - name: Upload artifact
+
+      - name: ⬆ Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
           path: ./participant_portal/storybook-static
@@ -53,6 +61,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Deploy to GitHub Pages
+      - name: 🚢 Deploy to GitHub Pages
         id: hosting
         uses: actions/deploy-pages@v1
