[shoegaze-template-apply] Disabling storybook on pull, adjusting cache rules for playwright deps

--- a/.github/workflows/ci-participant-portal.yml
+++ b/.github/workflows/ci-participant-portal.yml
@@ -112,7 +112,7 @@ jobs:
 
       - name: 🛠️ Install Playwright deps
         run: npx playwright install-deps
-        if: steps.playwright-cache.outputs.cache-hit != 'true'
+        if: steps.playwright-cache.outputs.cache-hit == 'true'
 
       - name: 🐳 Run Playwright in Docker Compose
         run: npx playwright test --retries=3
