--- a/.github/workflows/ci-participant-portal.yml
+++ b/.github/workflows/ci-participant-portal.yml
@@ -26,7 +26,7 @@ jobs:
           working-directory: ./participant_portal
 
       - name: 🔬 Lint
-      - run: npm --prefix participant_portal run lint
+        run: npm --prefix participant_portal run lint
 
   typecheck:
     name:  ʦ Typecheck
