--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
     inputs:
       env_name:
-        description: "env_name input"
+        description: "The environment to deploy to"
         required: true
         default: "dev"
         type: choice
@@ -15,12 +15,22 @@ on:
           - dev
           - staging
           - prod
+      app_name:
+        description: "The app to deploy"
+        required: true
+        default: "participant_portal"
+        type: choice
+        options:
+          - participant_portal
+          - staff_portal
+          - analytics
 
 env:
   ENV_NAME: ${{ inputs.env_name || 'dev' }}
+  APP_NAME: ${{ inputs.app_name || 'participant_portal' }}
 
-# Need to repeat the expression since env.ENV_NAME is not accessible in this context
-concurrency: cd-${{ inputs.env_name || 'dev' }}
+# Need to repeat the expression since env.WHATEVER is not accessible in this context
+concurrency: cd-${{ inputs.env_name || 'dev' }}-${{ inputs.app_name || 'participant_portal' }}
 
 jobs:
   deploy:
@@ -34,7 +44,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Build release
-        run: make release-build
+        run: make release-build APP_NAME=$APP_NAME
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -44,7 +54,7 @@ jobs:
           aws-region: us-west-2
 
       - name: Publish release
-        run: make release-publish
+        run: make release-publish APP_NAME=$APP_NAME
 
       - name: Deploy release
-        run: make release-deploy ENV_NAME="$ENV_NAME"
+        run: make release-deploy ENV_NAME="$ENV_NAME" APP_NAME=$APP_NAME
