--- a/.github/workflows/cd-storybook.yml
+++ b/.github/workflows/cd-storybook.yml
@@ -5,6 +5,9 @@ on:
   # !! Uncomment the lines below to enable this workflow
   push:
     branches: ["main"]
+    paths:
+      - participant_portal/**
+      - .github/workflows/cd-storybook.yml
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
