--- a/.github/workflows/ci-participant-portal.yml
+++ b/.github/workflows/ci-participant-portal.yml
@@ -3,8 +3,13 @@ on:
   push:
     branches:
       - main
-      - dev
-  pull_request: {}
+    paths:
+      - participant_portal/**
+      - .github/workflows/ci-participant-portal.yml
+  pull_request:
+    paths:
+      - participant_portal/**
+      - .github/workflows/ci-participant-portal.yml
 
 jobs:
   lint:
