--- a/.github/workflows/ci-participant-portal.yml
+++ b/.github/workflows/ci-participant-portal.yml
@@ -5,9 +5,11 @@ on:
       - main
     paths:
       - participant_portal/**
+      - .github/workflows/ci-participant-portal.yml
   pull_request:
     paths:
       - participant_portal/**
+      - .github/workflows/ci-participant-portal.yml
 
 jobs:
   lint:
