--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -27,12 +27,13 @@ on:
   # Designate this as a reusable workflow
   # See https://docs.github.com/en/actions/using-workflows/reusing-workflows
   workflow_call:
-    env_name:
-      required: true
-      type: string
-    app_name:
-      required: true
-      type: string
+    inputs:
+      env_name:
+        required: true
+        type: string
+      app_name:
+        required: true
+        type: string
 
 env:
   ENV_NAME: ${{ inputs.env_name || 'dev' }}
