--- a/.github/workflows/cd-on-push.yml
+++ b/.github/workflows/cd-on-push.yml
@@ -11,8 +11,47 @@ on:
 
 
 jobs:
-  deploy_to:
-    uses: ./.github/workflows/cd.yml
-    with:
-      env_name: dev
-      app_name: participant_portal
+  deploy_app:
+    name: 🪴 Deploy only changed apps
+    runs-on: ubuntu-latest
+    steps:
+      - name: ⬇️ Checkout repo
+        uses: actions/checkout@v3
+          with:
+            fetch-depth: 2  # To retrieve the preceding commit
+
+      - name: 📬 Get changed files in the participant_portal folder
+        id: changed-files-participant
+        uses: tj-actions/changed-files@v35
+        with:
+          files: participant_portal
+
+      - name: 📬📦 Deploy participant_portal if there are changes
+        if: steps.changed-files-participant.outputs.any_changed == 'true'
+        uses: ./.github/workflows/cd.yml
+        with:
+          app_name: participant_portal
+
+      - name: 📨 Get changed files in the staff_portal folder
+        id: changed-files-participant
+        uses: tj-actions/changed-files@v35
+        with:
+          files: staff_portal
+
+      - name: 📨📦 Deploy staff_portal if there are changes
+        if: steps.changed-files-participant.outputs.any_changed == 'true'
+        uses: ./.github/workflows/cd.yml
+        with:
+          app_name: staff_portal
+
+      - name: 📊 Get changed files in the analytics folder
+        id: changed-files-participant
+        uses: tj-actions/changed-files@v35
+        with:
+          files: analytics
+
+      - name: 📊📦 Deploy analytics if there are changes
+        if: steps.changed-files-participant.outputs.any_changed == 'true'
+        uses: ./.github/workflows/cd.yml
+        with:
+          app_name: analytics
