--- a/.github/workflows/cd-on-push.yml
+++ b/.github/workflows/cd-on-push.yml
@@ -12,10 +12,10 @@ on:
 
 jobs:
   check_participant:
-    name: 🔎📬 Check participant_portal for changes
+    name: 🔎 Check participant
     runs-on: ubuntu-latest
     outputs:
-      has_changed: ${{steps.changed-files-participant.outputs.any_changed == 'true'}}
+      has_changed: ${{ teps.changed-files-participant.outputs.any_changed }}
     steps:
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v3
@@ -34,9 +34,9 @@ jobs:
 
 
   deploy_participant:
-    name: 📬 Deploy participant portal if there are changes
+    name: 📬 Deploy participant
     needs: check_participant
-    if: ${{ needs.check_participant.has_changed }}
+    if: ${{ needs.check_participant.has_changed  == 'true'}}
     uses: ./.github/workflows/cd.yml
     with:
       app_name: participant_portal
