--- a/.github/workflows/cd-on-push.yml
+++ b/.github/workflows/cd-on-push.yml
@@ -15,7 +15,7 @@ jobs:
     name: 🔎 Check participant
     runs-on: ubuntu-latest
     outputs:
-      has_changed: ${{ teps.changed-files-participant.outputs.any_changed }}
+      has_changed: ${{ steps.changed-files-participant.outputs.any_changed }}
     steps:
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v3
