Add back staff portal and analytics CD.

--- a/.github/workflows/cd-on-push.yml
+++ b/.github/workflows/cd-on-push.yml
@@ -5,7 +5,6 @@ on:
   # push:
   #   branches: ["main"]
   # @DEBUG
-  workflow_dispatch:
   push:
     branches: ["PRP-166-cd-connect-the-infrastructure"]
 
@@ -28,7 +27,7 @@ jobs:
         with:
           files: participant_portal
 
-      - name: 📋 List participant_portal that have changed
+      - name: 📋 List participant_portal files that have changed
         run: |
           echo "List all the files that have changed: ${{ steps.changed-files-participant.outputs.all_changed_files }}"
 
@@ -41,44 +40,62 @@ jobs:
     with:
       app_name: participant_portal
 
-  # deploy_staff:
-  #   name: 📨 Deploy staff portal if there are changes
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: ⬇️ Checkout repo
-  #       uses: actions/checkout@v3
-  #       with:
-  #         fetch-depth: 2  # To retrieve the preceding commit
+  check_staff:
+    name: 🔎 Check staff
+    runs-on: ubuntu-latest
+    outputs:
+      has_changed: ${{ steps.changed-files-staff.outputs.any_changed }}
+    steps:
+      - name: ⬇️ Checkout repo
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 2  # To retrieve the preceding commit
 
-  #     - name: 🗂 Get changed files in the staff_portal folder
-  #       id: changed-files-staff
-  #       uses: tj-actions/changed-files@v35
-  #       with:
-  #         files: staff_portal
+      - name: 🗂 Get changed files in the staff_portal folder
+        id: changed-files-staff
+        uses: tj-actions/changed-files@v35
+        with:
+          files: staff_portal
 
-  #     - name: 📦 Deploy staff_portal if there are changes
-  #       if: steps.changed-files-staff.outputs.any_changed == 'true'
-  #       uses: ./.github/workflows/cd.yml
-  #       with:
-  #         app_name: staff_portal
+      - name: 📋 List staff_portal files that have changed
+        run: |
+          echo "List all the files that have changed: ${{ steps.changed-files-staff.outputs.all_changed_files }}"
 
-  # deploy_analytics:
-  #   name: 📊 Deploy analytics if there are changes
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: ⬇️ Checkout repo
-  #       uses: actions/checkout@v3
-  #       with:
-  #         fetch-depth: 2  # To retrieve the preceding commit
 
-  #     - name: 🗂 Get changed files in the analytics folder
-  #       id: changed-files-analytics
-  #       uses: tj-actions/changed-files@v35
-  #       with:
-  #         files: analytics
+  deploy_staff:
+    name: 📨 Deploy staff
+    needs: check_staff
+    if: ${{ needs.check_staff.outputs.has_changed  == 'true'}}
+    uses: ./.github/workflows/cd.yml
+    with:
+      app_name: staff_portal
 
-  #     - name: 📦 Deploy analytics if there are changes
-  #       if: steps.changed-files-analytics.outputs.any_changed == 'true'
-  #       uses: ./.github/workflows/cd.yml
-  #       with:
-  #         app_name: analytics
+  check_analytics:
+    name: 🔎 Check analytics
+    runs-on: ubuntu-latest
+    outputs:
+      has_changed: ${{ steps.changed-files-analytics.outputs.any_changed }}
+    steps:
+      - name: ⬇️ Checkout repo
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 2  # To retrieve the preceding commit
+
+      - name: 🗂 Get changed files in the analytics folder
+        id: changed-files-analytics
+        uses: tj-actions/changed-files@v35
+        with:
+          files: analytics
+
+      - name: 📋 List analytics files that have changed
+        run: |
+          echo "List all the files that have changed: ${{ steps.changed-files-analytics.outputs.all_changed_files }}"
+
+
+  deploy_analytics:
+    name: 📊 Deploy analytics
+    needs: check_analytics
+    if: ${{ needs.check_analytics.outputs.has_changed  == 'true'}}
+    uses: ./.github/workflows/cd.yml
+    with:
+      app_name: analytics
